...
            android:hint="@string/search_hint"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/user_list_item"
        app:layout_constraintTop_toBottomOf="@+id/list_search_input"
...
