...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_email"
            app:layout_constraintTop_toTopOf="@+id/image_email"
            tool:text="jhondoe@email.com" />

        <Button
            android:id="@+id/btn_go_to_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/btn_go_to_details"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
...
